@@ -5,6 +5,8 @@ plugins {
     alias(libs.plugins.ksp)
     id("com.google.gms.google-services")
     id("jacoco")
+    id("org.jlleitschuh.gradle.ktlint") version "14.0.1"
+    alias(libs.plugins.detekt)
 }
 
 jacoco {
@@ -13,12 +15,12 @@ jacoco {
 
 android {
     namespace = "com.example.dataagrin.app"
-    compileSdk = 34
+    compileSdk = 35
 
     defaultConfig {
         applicationId = "com.example.dataagrin.app"
         minSdk = 26
-        targetSdk = 34
+        targetSdk = 35
         versionCode = 1
         versionName = "1.0"
 
@@ -30,7 +32,7 @@ android {
             isMinifyEnabled = false
             proguardFiles(
                 getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                "proguard-rules.pro",
             )
         }
     }
@@ -48,57 +50,71 @@ android {
     testOptions {
         unitTests {
             isIncludeAndroidResources = true
-            all {
-                it.extensions.configure<JacocoTaskExtension> {
+            all { task ->
+                task.extensions.configure<JacocoTaskExtension> {
                     isIncludeNoLocationClasses = true
                     excludes = listOf("jdk.internal.*")
                 }
+
+                // Disable automatic application loading for Robolectric tests
+                task.systemProperty("robolectric.createApplication", "false")
             }
         }
     }
 }
 
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+
 tasks.register<JacocoReport>("jacocoTestReport") {
     dependsOn("testDebugUnitTest")
-    
+
     reports {
         xml.required.set(true)
         html.required.set(true)
         html.outputLocation.set(layout.buildDirectory.dir("reports/jacoco"))
     }
-    
-    val fileFilter = listOf(
-        "**/R.class",
-        "**/R$*.class",
-        "**/BuildConfig.*",
-        "**/Manifest*.*",
-        "**/*Test*.*",
-        "**/android/**/*.*",
-        "**/*_Factory*",
-        "**/*_MembersInjector*",
-        "**/*Component*",
-        "**/*Module*",
-        "**/di/**",
-        "**/hilt_aggregated_deps/**"
-    )
-    
-    val debugTree = fileTree("${layout.buildDirectory.get()}/tmp/kotlin-classes/debug") {
-        exclude(fileFilter)
-    }
-    
+
+    val fileFilter =
+        listOf(
+            "**/R.class",
+            "**/R$*.class",
+            "**/BuildConfig.*",
+            "**/Manifest*.*",
+            "**/*Test*.*",
+            "**/android/**/*.*",
+            "**/*_Factory*",
+            "**/*_MembersInjector*",
+            "**/*Component*",
+            "**/*Module*",
+            "**/di/**",
+            "**/hilt_aggregated_deps/**",
+        )
+
+    val debugTree =
+        fileTree("${layout.buildDirectory.get()}/tmp/kotlin-classes/debug") {
+            exclude(fileFilter)
+        }
+
     val mainSrc = "${project.projectDir}/src/main/java"
-    
+
     sourceDirectories.setFrom(files(mainSrc))
     classDirectories.setFrom(files(debugTree))
-    executionData.setFrom(fileTree(layout.buildDirectory) {
-        include("jacoco/testDebugUnitTest.exec")
-    })
+    executionData.setFrom(
+        files(
+            fileTree(layout.buildDirectory) {
+                include("jacoco/testDebugUnitTest.exec")
+            },
+        ),
+    )
 }
 
 dependencies {
-    //Compose & Android Core
+    // Compose & Android Core
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.lifecycle.runtime.ktx)
+    implementation(libs.androidx.lifecycle.viewmodel.ktx)
     implementation(libs.androidx.activity.compose)
     implementation(platform(libs.androidx.compose.bom))
     implementation(libs.androidx.compose.ui)
@@ -110,33 +126,56 @@ dependencies {
     implementation(libs.androidx.lifecycle.viewmodel.compose)
     implementation(libs.androidx.navigation.compose)
 
-    //Data
+    // Permissions
+    implementation(libs.accompanist.permissions)
+
+    // Data
     implementation(libs.androidx.room.ktx)
     ksp(libs.androidx.room.compiler)
     implementation(libs.retrofit.core)
     implementation(libs.retrofit.converter.gson)
 
-    //DI
+    // DI
     implementation(libs.koin.android)
     implementation(libs.koin.androidx.compose)
 
-    //Concurrency
+    // Concurrency
     implementation(libs.kotlinx.coroutines.android)
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.10.2")
 
-    //Firebase
+    // Firebase
     implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
     implementation("com.google.firebase:firebase-firestore")
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.firebase:firebase-database")
 
-    //Testes
+    // Location
+    implementation("com.google.android.gms:play-services-location:21.1.0")
+
+    // Testes
     testImplementation(libs.junit)
     testImplementation(libs.mockk)
     testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation("org.robolectric:robolectric:4.16")
+    testImplementation("androidx.arch.core:core-testing:2.2.0")
+    testImplementation(libs.androidx.lifecycle.viewmodel.ktx)
+    testImplementation(platform(libs.androidx.compose.bom))
+    testImplementation(libs.androidx.compose.ui.test.junit4)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
     androidTestImplementation(platform(libs.androidx.compose.bom))
     androidTestImplementation(libs.androidx.compose.ui.test.junit4)
     debugImplementation(libs.androidx.compose.ui.tooling)
     debugImplementation(libs.androidx.compose.ui.test.manifest)
+}
+
+ktlint {
+    version.set("1.3.1")
+    android.set(true)
+}
+
+detekt {
+    toolVersion = "1.23.6"
+    config.setFrom(files("$projectDir/config/detekt/detekt.yml"))
+    buildUponDefaultConfig = true
 }
